# calce

./: .dockerignore  BACKLOG.md  CLAUDE.md  Cargo.toml  README.md  architectural_review.md  bacon.toml  docker-compose.yml  tasks.py
.sqlx/: query-115d01aa2e92a9057c5e1c3c3dfe0f290f39ff659cae92a16e22f3f34c3894bc.json  query-1a66518dc4aa7048d18b750fd86b746106453c8bc4b596669412bf321346b227.json  query-1c29cd4561d45a3526cce6bd719c5b361e48c65956c8108eeb2299ef9322c135.json  query-3563f3b899d77a0b0b9f153cbf3c17d3df0ad53bd06cf207d40885009db0037f.json  query-38eff151b70c4d9903ca8d380c7afc92d5c6d1c91e5ec29b7f5db1f195bfef3c.json  query-507ef837de539379874bd58eb3e7dca7b7e9d5c4651a1657bfc6caf0a5c14075.json  query-52d05584ba5120cb099467ef0e773811e013d1302fde7d14e2e5c63be4a9198a.json  query-5466d9cb2509fe194bbbf0c0611f194fb6c9909999533e84a385b35b52d19b82.json  query-6fccda5370714deff2e0f92e61854ebcdbdbaf1513398295ac1d34735fe0e102.json  query-70cf99e0997ff17e186dae076593fb0d4d50364579f4baff5b103ce7e9be0038.json  query-79199f3ade9dda8cabb3e73aab45c67b8f95360ff6d006ca8c828acd5b9d78d6.json  query-8c12121a369ebe36499152a15070d628fdc13f375374ddd6559c1b6084ef3c9b.json  (+20 more)
crates/calce-cdc/: Cargo.toml
crates/calce-cdc/src/: error.rs  lib.rs  listener.rs  protocol.rs  wire.rs
crates/calce-cdc/tests/: e2e.rs
crates/calce-core/: CLAUDE.md  Cargo.toml
crates/calce-core/src/: engine.rs  error.rs  lib.rs
crates/calce-core/src/calc/: market_value.rs  value_change.rs  volatility.rs
crates/calce-core/src/domain/: account.rs  mod.rs  organization.rs
crates/calce-core/src/services/: user_data.rs
docs/: architecture.md  auth.md  cdc.md  (+7 more)
(+153 files in other folders)
