[workspace]
members = ["crates/calce-core", "crates/calce-datastructs", "crates/calce-data", "crates/calce-cdc", "crates/calce-python", "crates/calce-api"]
default-members = ["crates/calce-core", "crates/calce-datastructs", "crates/calce-data", "crates/calce-cdc", "crates/calce-api"]
resolver = "3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Pedantic overrides — too noisy for the value they add
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[workspace.lints.rust]
warnings = "deny"
unreachable_pub = "warn"
