[package]
name = "calce-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde", "chrono/serde"]

[dependencies]
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"], optional = true }

[lints]
workspace = true

[dev-dependencies]
